Fix SiteNav overflow-hidden bug causing clicks on page to add overflow-hidden

--- a/frontend/sass/base/_utilities.scss
+++ b/frontend/sass/base/_utilities.scss
@@ -83,6 +83,15 @@
         opacity: 1 !important;
     }
 
+    .hidden {
+        visibility: hidden !important;
+        opacity: 0 !important;
+    }
+
+    .d-none {
+        display: none !important;
+    }
+
     //Dealing with SiteNav glitch
     .z-index-navbar {
         z-index: $navbar-full-z-index !important;
